--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+<h1>TheGuardianProject</h1>
+<p>
+	Bienvenue sur la page d'acceuil de TheGuardianProject.
+	Comme vous pouvez le voir, ce site en est a ses balbutiments.
+	Vous trouverez ci-dessous les pages déja accessibles :
+</p>
